<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_welcome"
	tools:context=".ui.activities.LaunchActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:overScrollMode="never">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.romantsekhmeistruk.slippyviews.widgets.views.FontTextView
				android:id="@+id/header"
				android:layout_marginRight="@dimen/standard_margin"
				android:layout_marginLeft="@dimen/standard_margin"
				android:layout_width="wrap_content"
				android:layout_marginTop="@dimen/header_margin_top"
				android:layout_height="wrap_content"
				android:lineSpacingExtra="0dp"
				android:text="@string/welcome"
				android:textColor="@color/colorWhite"
				android:textSize="@dimen/header_text_size"
				app:textFont="@string/font_pebble_regular"/>

			<com.romantsekhmeistruk.slippyviews.widgets.views.FontTextView
				android:id="@+id/subheader"
				android:layout_width="wrap_content"
				android:layout_marginRight="@dimen/standard_margin"
				android:layout_marginLeft="@dimen/standard_margin"
				android:layout_marginTop="20dp"
				android:layout_height="wrap_content"
				android:lineSpacingExtra="0dp"
				android:text="@string/welcome_screen_description"
				android:textColor="@color/colorWhite"
				android:textSize="@dimen/normal_text_size"
				app:textFont="@string/font_open_sans_regular"/>

			<LinearLayout
				android:id="@+id/buttons_container"
				android:layout_marginRight="@dimen/standard_margin"
				android:layout_marginLeft="@dimen/standard_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<FrameLayout
					android:id="@+id/recycler_view"
					android:layout_marginTop="40dp"
					android:layout_width="match_parent"
					android:layout_height="@dimen/button_height"
					android:background="@drawable/view_blueberry_rounded_corners_rectangle">

					<com.romantsekhmeistruk.slippyviews.widgets.views.FontTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/recycler_view"
						android:textColor="@color/colorWhite"
						android:textSize="@dimen/button_text_size"
						app:font="@string/font_open_sans_regular"/>
				</FrameLayout>

				<FrameLayout
					android:id="@+id/view_pager"
					android:layout_marginTop="20dp"
					android:layout_width="match_parent"
					android:layout_height="@dimen/button_height"
					android:layout_marginBottom="20dp"
					android:background="@drawable/view_white_rounded_corners_rectangle">

					<com.romantsekhmeistruk.slippyviews.widgets.views.FontTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/view_pager"
						android:textColor="@color/colorBlueberry"
						android:textSize="@dimen/button_text_size"
						app:font="@string/font_open_sans_regular"/>
				</FrameLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
